--- a/examples/helloworld/single/config.json
+++ b/examples/helloworld/single/config.json
@@ -1,10 +1,6 @@
 {
   "ClusterName": "simple",
   "LocalAddr": "127.0.0.1:8903",
-  "RemoteAddrs": {
-    "qinglong": "127.0.0.1:8904",
-    "baihu": "127.0.0.1:8905",
-    "zhuque": "127.0.0.1:8906"
-  },
+  "RemoteAddrs": {},
   "TickIntervalMs": 500
 }
